--- a/Lecture9.ipynb
+++ b/Lecture9.ipynb
@@ -566,7 +566,7 @@
    "source": [
     "import pandas as pd\n",
     "# Pairwise distance between European cities\n",
-    "url = 'https://raw.githubusercontent.com/neurospin/pystatsml/master/datasets/eurodist.csv'\n",
+    "url = 'https://media.githubusercontent.com/media/neurospin/pystatsml/master/datasets/eurodist.csv'\n",
     "df = pd.read_csv(url)\n",
     "print(df.iloc[:7, :7])\n",
     "print()\n",
